GUI improvements. Small changes. Implement functionality for importing loudness files.

--- a/DevilDaggersAssetEditor/App.xaml
+++ b/DevilDaggersAssetEditor/App.xaml
@@ -3,5 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="GUI/Windows/Main.xaml">
 	<Application.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="GUI/Themes/DevilDaggersAssetEditor.xaml" />
+			</ResourceDictionary.MergedDictionaries>
+		</ResourceDictionary>
 	</Application.Resources>
 </Application>
