--- a/DevilDaggersAssetEditor/GUI/UserControls/AudioTabControl.xaml
+++ b/DevilDaggersAssetEditor/GUI/UserControls/AudioTabControl.xaml
@@ -9,27 +9,27 @@
 		<Grid>
 			<Grid.RowDefinitions>
 				<RowDefinition Height="20" />
-				<RowDefinition Height="24" />
+				<RowDefinition Height="20" />
 				<RowDefinition />
 			</Grid.RowDefinitions>
 			<StackPanel Grid.Row="0" Orientation="Horizontal">
-				<Button Click="Compress_Click">Compress audio</Button>
-				<Button Click="ImportFolder_Click">Import folder containing audio</Button>
-				<Button Click="ImportLoudness_Click">Import loudness file</Button>
+				<Button Width="192" Margin="0,0,4,0" Click="Compress_Click">Compress audio</Button>
+				<Button Width="192" Margin="4,0,4,0" Click="ImportFolder_Click">Import audio paths from folder</Button>
+				<Button Width="192" Margin="4,0,4,0" Click="ImportLoudness_Click">Import loudness file</Button>
 			</StackPanel>
 			<Grid Grid.Row="1" Background="DarkGray">
 				<Grid.ColumnDefinitions>
 					<ColumnDefinition />
 					<ColumnDefinition />
-					<ColumnDefinition Width="2*" />
+					<!--<ColumnDefinition Width="2*" />-->
 					<ColumnDefinition Width="4*" />
 					<ColumnDefinition />
 					<ColumnDefinition Width="20" />
 				</Grid.ColumnDefinitions>
 				<Label Grid.Column="0" FontWeight="Bold">Asset name</Label>
 				<Label Grid.Column="1" FontWeight="Bold">Loudness</Label>
-				<Label Grid.Column="2" FontWeight="Bold">Description</Label>
-				<Label Grid.Column="3" FontWeight="Bold">Path</Label>
+				<!--<Label Grid.Column="2" FontWeight="Bold">Description</Label>-->
+				<Label Grid.Column="2" FontWeight="Bold">Path</Label>
 			</Grid>
 			<ScrollViewer Grid.Row="2">
 				<StackPanel Name="AssetEditor" />
