--- a/DevilDaggersAssetEditor/GUI/UserControls/AudioAssetControl.xaml
+++ b/DevilDaggersAssetEditor/GUI/UserControls/AudioAssetControl.xaml
@@ -9,14 +9,14 @@
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition />
 			<ColumnDefinition />
-			<ColumnDefinition Width="2*" />
+			<!--<ColumnDefinition Width="2*" />-->
 			<ColumnDefinition Width="4*" />
 			<ColumnDefinition />
 		</Grid.ColumnDefinitions>
 		<Label Grid.Column="0" Content="{Binding AssetName}" />
-		<TextBox Grid.Column="1" Text="{Binding Loudness}" />
-		<Label Grid.Column="2" Content="{Binding Description}" />
-		<Label Grid.Column="3" Name="LabelEditorPath" Content="{Binding EditorPath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" /> <!--TODO: Fix binding and remove Name-->
-		<Button Grid.Column="4" Click="ButtonBrowsePath_Click">Browse path</Button>
+		<TextBox Grid.Column="1" Name="TextBoxLoudness" Text="{Binding Loudness, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+		<!--<Label Grid.Column="2" Content="{Binding Description}" />-->
+		<Label Grid.Column="2" Name="LabelEditorPath" Content="{Binding EditorPath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" /> <!--TODO: Fix binding and remove Name-->
+		<Button Grid.Column="3" Click="ButtonBrowsePath_Click">Browse path</Button>
 	</Grid>
 </UserControl>
