--- a/DevilDaggersAssetEditor/GUI/Windows/Main.xaml
+++ b/DevilDaggersAssetEditor/GUI/Windows/Main.xaml
@@ -15,12 +15,16 @@
 			<Menu DockPanel.Dock="Top">
 				<MenuItem Header="File">
 					<MenuItem Name="ExtractMenuItem" Header="Extract binary file" />
+					<Separator />
+					<MenuItem Name="BinaryFileSpecificOptions" Header="Audio">
+						
+					</MenuItem>
 				</MenuItem>
 			</Menu>
 		</DockPanel>
-		<TabControl Grid.Row="1">
+		<TabControl Grid.Row="1" SelectionChanged="TabControl_SelectionChanged" Name="TabControl">
 			<TabItem Header="audio">
-				<local:AudioTabControl />
+				<local:AudioTabControl x:Name="AudioTabControl" />
 			</TabItem>
 			<TabItem Header="dd" IsEnabled="False"></TabItem>
 			<TabItem Header="core" IsEnabled="False"></TabItem>
