--- a/DevilDaggersAssetEditor/GUI/UserControls/AudioAssetControl.xaml
+++ b/DevilDaggersAssetEditor/GUI/UserControls/AudioAssetControl.xaml
@@ -16,7 +16,8 @@
 		<Label Grid.Column="0" Content="{Binding AssetName}" />
 		<TextBox Grid.Column="1" Name="TextBoxLoudness" Text="{Binding Loudness, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 		<Label Grid.Column="2" Content="{Binding Description}" />
-		<Label Grid.Column="3" Name="LabelEditorPath" Content="{Binding EditorPath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" /> <!--TODO: Fix binding and remove Name-->
+		<!--TODO: Fix binding and remove Name-->
+		<Label Grid.Column="3" Name="LabelEditorPath" Content="{Binding EditorPath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 		<Button Grid.Column="4" Click="ButtonBrowsePath_Click">Browse path</Button>
 	</Grid>
 </UserControl>
