--- a/DevilDaggersAssetEditor/GUI/UserControls/TabControls/AudioTabControl.xaml
+++ b/DevilDaggersAssetEditor/GUI/UserControls/TabControls/AudioTabControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="DevilDaggersAssetEditor.GUI.UserControls.AudioTabControl"
+﻿<UserControl x:Class="DevilDaggersAssetEditor.GUI.UserControls.TabControls.AudioTabControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
