--- a/DevilDaggersAssetEditor/GUI/UserControls/AssetControls/ModelAssetControl.xaml
+++ b/DevilDaggersAssetEditor/GUI/UserControls/AssetControls/ModelAssetControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="DevilDaggersAssetEditor.GUI.UserControls.AssetControls.ModelBindingAssetControl"
+﻿<UserControl x:Class="DevilDaggersAssetEditor.GUI.UserControls.AssetControls.ModelAssetControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
