--- a/DevilDaggersAssetEditor/GUI/Windows/Main.xaml
+++ b/DevilDaggersAssetEditor/GUI/Windows/Main.xaml
@@ -5,8 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:tabControls="clr-namespace:DevilDaggersAssetEditor.GUI.UserControls.TabControls"
         mc:Ignorable="d"
-        Title="Devil Daggers Asset Editor" Height="900" Width="1600"
-		Loaded="Window_Loaded">
+        Title="Devil Daggers Asset Editor" Height="900" Width="1600">
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="18"/>
@@ -14,14 +13,10 @@
 		</Grid.RowDefinitions>
 		<DockPanel Grid.Row="0">
 			<Menu DockPanel.Dock="Top">
-				<MenuItem Header="File">
-					<MenuItem Name="ExtractMenuItem" Header="Extract binary file" />
-					<Separator />
-					<MenuItem Name="BinaryFileSpecificOptions" Header="Audio" />
-				</MenuItem>
+				<MenuItem Header="File" Name="FileMenuItem" />
 			</Menu>
 		</DockPanel>
-		<TabControl Grid.Row="1" SelectionChanged="TabControl_SelectionChanged" Name="TabControl">
+		<TabControl Grid.Row="1" Name="TabControl">
 			<TabItem Header="audio">
 				<ScrollViewer>
 					<tabControls:AudioTabControl x:Name="AudioAudioTabControl" BinaryFileName="Audio" />
