--- a/DevilDaggersAssetEditor/GUI/UserControls/AssetControls/AudioAssetControl.xaml
+++ b/DevilDaggersAssetEditor/GUI/UserControls/AssetControls/AudioAssetControl.xaml
@@ -4,7 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="20" d:DesignWidth="800">
+             d:DesignHeight="20" d:DesignWidth="800"
+			 Loaded="UserControl_Loaded">
 	<Grid x:Name="Data">
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition />
@@ -14,10 +15,9 @@
 			<ColumnDefinition />
 		</Grid.ColumnDefinitions>
 		<TextBlock Grid.Column="0" Text="{Binding AssetName}" />
-		<TextBox Grid.Column="1" Name="TextBoxLoudness" Text="{Binding Loudness, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+		<TextBox Grid.Column="1" Name="TextBoxLoudness" />
 		<TextBlock Grid.Column="2" Text="{Binding Description}" />
-		<!--TODO: Fix binding and remove Name-->
-		<TextBlock Grid.Column="3" Name="TextBlockEditorPath" Text="{Binding EditorPath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+		<TextBlock Grid.Column="3" Name="TextBlockEditorPath" />
 		<Button Grid.Column="4" Click="ButtonBrowsePath_Click">Browse path</Button>
 	</Grid>
 </UserControl>
