--- a/DevilDaggersAssetEditor/GUI/Themes/DevilDaggersAssetEditor.xaml
+++ b/DevilDaggersAssetEditor/GUI/Themes/DevilDaggersAssetEditor.xaml
@@ -1,8 +1,87 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:windows="clr-namespace:DevilDaggersAssetEditor.GUI.Windows">
+	<Style TargetType="Window">
+		<Style.Setters>
+			<Setter Property="Background" Value="#bbb" />
+		</Style.Setters>
+	</Style>
+	<Style TargetType="{x:Type windows:AboutWindow}" BasedOn="{StaticResource {x:Type Window}}" />
+	<Style TargetType="{x:Type windows:CheckingForUpdatesWindow}" BasedOn="{StaticResource {x:Type Window}}" />
+	<Style TargetType="{x:Type windows:ErrorWindow}" BasedOn="{StaticResource {x:Type Window}}" />
+	<Style TargetType="{x:Type windows:MainWindow}" BasedOn="{StaticResource {x:Type Window}}" />
+	<Style TargetType="{x:Type windows:MessageWindow}" BasedOn="{StaticResource {x:Type Window}}" />
+	<!--<Style TargetType="{x:Type windows:SettingsWindow}" BasedOn="{StaticResource {x:Type Window}}" />-->
+	<Style TargetType="{x:Type windows:UpdateRecommendedWindow}" BasedOn="{StaticResource {x:Type Window}}" />
+
+	<Style TargetType="StackPanel" x:Key="PaddingStackPanel">
+		<Style.Setters>
+			<Setter Property="Margin" Value="12,12,12,12" />
+		</Style.Setters>
+	</Style>
+
 	<Style TargetType="Label">
 		<Style.Setters>
 			<Setter Property="Padding" Value="2,2,2,2" />
 			<Setter Property="Margin" Value="0,0,0,0" />
+		</Style.Setters>
+	</Style>
+	<Style TargetType="Label" x:Key="TitleLabel">
+		<Style.Setters>
+			<Setter Property="FontSize" Value="20" />
+		</Style.Setters>
+	</Style>
+
+	<Style TargetType="TextBox">
+		<Style.Triggers>
+			<Trigger Property="Validation.HasError" Value="True">
+				<Setter Property="Background" Value="#f88" />
+			</Trigger>
+		</Style.Triggers>
+		<Style.Setters>
+			<Setter Property="Validation.ErrorTemplate" Value="{x:Null}" />
+			<Setter Property="HorizontalAlignment" Value="Stretch" />
+			<Setter Property="Margin" Value="2,2,2,2" />
+			<Setter Property="Height" Value="20" />
+		</Style.Setters>
+	</Style>
+	<Style TargetType="TextBox" x:Key="ParagraphTextBox">
+		<Style.Setters>
+			<Setter Property="TextWrapping" Value="WrapWithOverflow" />
+			<Setter Property="Padding" Value="6,8,6,8" />
+		</Style.Setters>
+	</Style>
+
+	<Style TargetType="Button">
+		<Style.Setters>
+			<Setter Property="Margin" Value="2,2,2,2" />
+		</Style.Setters>
+	</Style>
+	<Style TargetType="Button" x:Key="OKButton">
+		<Style.Setters>
+			<Setter Property="Width" Value="128" />
+			<Setter Property="Margin" Value="2,6,2,2" />
+			<Setter Property="IsDefault" Value="True" />
+		</Style.Setters>
+	</Style>
+
+	<Style TargetType="TextBlock">
+		<Style.Setters>
+			<Setter Property="TextWrapping" Value="WrapWithOverflow" />
+		</Style.Setters>
+	</Style>
+	<Style TargetType="TextBlock" x:Key="ParagraphTextBlock">
+		<Style.Setters>
+			<Setter Property="TextWrapping" Value="WrapWithOverflow" />
+			<Setter Property="Padding" Value="6,8,6,8" />
+		</Style.Setters>
+	</Style>
+
+	<Style TargetType="Image" x:Key="Logo">
+		<Style.Setters>
+			<Setter Property="Width" Value="96" />
+			<Setter Property="Source" Value="/Content/Images/Icon/Icon32.png" />
+			<Setter Property="RenderOptions.BitmapScalingMode" Value="NearestNeighbor" />
 		</Style.Setters>
 	</Style>
 </ResourceDictionary>
