--- a/DevilDaggersAssetEditor/GUI/UserControls/AssetControls/AudioAssetControl.xaml
+++ b/DevilDaggersAssetEditor/GUI/UserControls/AssetControls/AudioAssetControl.xaml
@@ -14,10 +14,10 @@
 			<ColumnDefinition Width="4*" />
 			<ColumnDefinition />
 		</Grid.ColumnDefinitions>
-		<TextBlock Grid.Column="0" Text="{Binding AssetName}" />
+		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="0" Text="{Binding AssetName}" />
 		<TextBox Grid.Column="1" Name="TextBoxLoudness" />
-		<TextBlock Grid.Column="2" Text="{Binding Description}" />
-		<TextBlock Grid.Column="3" Name="TextBlockEditorPath" />
+		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="2" Text="{Binding Description}" />
+		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="3" Name="TextBlockEditorPath" />
 		<Button Grid.Column="4" Click="ButtonBrowsePath_Click">Browse path</Button>
 	</Grid>
 </UserControl>
