--- a/DevilDaggersAssetEditor/GUI/UserControls/AssetControls/ModelBindingAssetControl.xaml
+++ b/DevilDaggersAssetEditor/GUI/UserControls/AssetControls/ModelBindingAssetControl.xaml
@@ -12,9 +12,9 @@
 			<ColumnDefinition Width="4*" />
 			<ColumnDefinition />
 		</Grid.ColumnDefinitions>
-		<TextBlock Grid.Column="0" Text="{Binding AssetName}" />
-		<TextBlock Grid.Column="1" Text="{Binding Description}" />
-		<TextBlock Grid.Column="2" Name="TextBlockEditorPath" />
+		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="0" Text="{Binding AssetName}" />
+		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="1" Text="{Binding Description}" />
+		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="2" Name="TextBlockEditorPath" />
 		<Button Grid.Column="3" Click="ButtonBrowsePath_Click">Browse path</Button>
 	</Grid>
 </UserControl>
