--- a/DevilDaggersAssetEditor/GUI/UserControls/AssetControls/ShaderAssetControl.xaml
+++ b/DevilDaggersAssetEditor/GUI/UserControls/AssetControls/ShaderAssetControl.xaml
@@ -9,12 +9,12 @@
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="3*" />
 			<ColumnDefinition Width="5*" />
-			<ColumnDefinition Width="8*" />
-			<ColumnDefinition Width="2*" />
+			<ColumnDefinition Width="9*" />
+			<ColumnDefinition />
 		</Grid.ColumnDefinitions>
 		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="0" Text="{Binding AssetName}" />
 		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="1" Text="{Binding Description}" />
 		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="2" Name="TextBlockEditorPath" />
-		<Button Grid.Column="3" Click="ButtonBrowsePath_Click">Browse path</Button>
+		<Button Grid.Column="3" Click="ButtonBrowsePath_Click">Browse</Button>
 	</Grid>
 </UserControl>
