--- a/DevilDaggersAssetEditor/GUI/UserControls/ExpanderControls/AudioExpanderControl.xaml
+++ b/DevilDaggersAssetEditor/GUI/UserControls/ExpanderControls/AudioExpanderControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="DevilDaggersAssetEditor.GUI.UserControls.TabControls.ModelBindingsTabControl"
+﻿<UserControl x:Class="DevilDaggersAssetEditor.GUI.UserControls.ExpanderControls.AudioExpanderControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
 			 Loaded="UserControl_Loaded">
-	<Expander Header="Model Bindings" IsExpanded="True">
+	<Expander Header="Audio" IsExpanded="True">
 		<Grid>
 			<Grid.RowDefinitions>
 				<RowDefinition Height="20" />
@@ -14,14 +14,16 @@
 			</Grid.RowDefinitions>
 			<Grid Grid.Row="0" Background="DarkGray">
 				<Grid.ColumnDefinitions>
-					<ColumnDefinition Width="3*" />
+					<ColumnDefinition Width="2*" />
+					<ColumnDefinition />
 					<ColumnDefinition Width="5*" />
 					<ColumnDefinition Width="9*" />
 					<ColumnDefinition />
 				</Grid.ColumnDefinitions>
 				<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="0" FontWeight="Bold">Asset name</TextBlock>
-				<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="1" FontWeight="Bold">Description</TextBlock>
-				<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="2" FontWeight="Bold">Path</TextBlock>
+				<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="1" FontWeight="Bold">Loudness</TextBlock>
+				<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="2" FontWeight="Bold">Description</TextBlock>
+				<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="3" FontWeight="Bold">Path</TextBlock>
 			</Grid>
 			<StackPanel Grid.Row="1" Name="AssetEditor" />
 		</Grid>
