--- a/DevilDaggersAssetEditor/GUI/UserControls/ExpanderControls/TexturesExpanderControl.xaml
+++ b/DevilDaggersAssetEditor/GUI/UserControls/ExpanderControls/TexturesExpanderControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="DevilDaggersAssetEditor.GUI.UserControls.TabControls.ModelsTabControl"
+﻿<UserControl x:Class="DevilDaggersAssetEditor.GUI.UserControls.ExpanderControls.TexturesExpanderControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
 			 Loaded="UserControl_Loaded">
-	<Expander Header="Models" IsExpanded="True">
+	<Expander Header="Textures" IsExpanded="True">
 		<Grid>
 			<Grid.RowDefinitions>
 				<RowDefinition Height="20" />
