--- a/DevilDaggersAssetEditor/GUI/Windows/Main.xaml
+++ b/DevilDaggersAssetEditor/GUI/Windows/Main.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:userControls="clr-namespace:DevilDaggersAssetEditor.GUI.UserControls"
-        xmlns:tabControls="clr-namespace:DevilDaggersAssetEditor.GUI.UserControls.TabControls"
+        xmlns:expanderControls="clr-namespace:DevilDaggersAssetEditor.GUI.UserControls.ExpanderControls"
         mc:Ignorable="d"
         Title="Devil Daggers Asset Editor" Height="900" Width="1600"
 		Loaded="Window_Loaded">
@@ -20,22 +20,22 @@
 			<TabControl Grid.Row="1" Name="TabControl" Width="1366" Height="768">
 				<TabItem Header="audio">
 					<ScrollViewer>
-						<tabControls:AudioTabControl x:Name="AudioAudioTabControl" BinaryFileType="Audio" />
+						<expanderControls:AudioExpanderControl x:Name="AudioAudioExpanderControl" BinaryFileType="Audio" />
 					</ScrollViewer>
 				</TabItem>
 				<TabItem Header="dd" IsEnabled="False">
 					<ScrollViewer>
 						<StackPanel>
-							<tabControls:ModelBindingsTabControl x:Name="DDModelBindingsTabControl" BinaryFileType="DD" />
-							<tabControls:ModelsTabControl x:Name="DDModelsTabControl" BinaryFileType="DD" />
-							<tabControls:ShadersTabControl x:Name="DDShadersTabControl" BinaryFileType="DD" />
-							<tabControls:TexturesTabControl x:Name="DDTexturesTabControl" BinaryFileType="DD" />
+							<expanderControls:ModelBindingsExpanderControl x:Name="DDModelBindingsExpanderControl" BinaryFileType="DD" />
+							<expanderControls:ModelsExpanderControl x:Name="DDModelsExpanderControl" BinaryFileType="DD" />
+							<expanderControls:ShadersExpanderControl x:Name="DDShadersExpanderControl" BinaryFileType="DD" />
+							<expanderControls:TexturesExpanderControl x:Name="DDTexturesExpanderControl" BinaryFileType="DD" />
 						</StackPanel>
 					</ScrollViewer>
 				</TabItem>
 				<TabItem Header="core" IsEnabled="False">
 					<ScrollViewer>
-						<tabControls:ShadersTabControl x:Name="CoreShadersTabControl" BinaryFileType="Core" />
+						<expanderControls:ShadersExpanderControl x:Name="CoreShadersExpanderControl" BinaryFileType="Core" />
 					</ScrollViewer>
 				</TabItem>
 				<TabItem Header="particle" IsEnabled="False"></TabItem>
