--- a/DevilDaggersAssetEditor/GUI/Windows/Main.xaml
+++ b/DevilDaggersAssetEditor/GUI/Windows/Main.xaml
@@ -38,7 +38,11 @@
 						</StackPanel>
 					</ScrollViewer>
 				</TabItem>
-				<TabItem Header="particle" IsEnabled="False"></TabItem>
+				<TabItem Header="particle" IsEnabled="False">
+					<ScrollViewer>
+						<expanderControls:ParticlesExpanderControl x:Name="ParticleParticlesExpanderControl" BinaryFileType="Particle" />
+					</ScrollViewer>
+				</TabItem>
 			</TabControl>
 		</ScrollViewer>
 	</Grid>
