--- a/DevilDaggersAssetEditor/GUI/Windows/Main.xaml
+++ b/DevilDaggersAssetEditor/GUI/Windows/Main.xaml
@@ -38,7 +38,7 @@
 						</StackPanel>
 					</ScrollViewer>
 				</TabItem>
-				<TabItem Header="particle" IsEnabled="False">
+				<TabItem Header="particle">
 					<ScrollViewer>
 						<expanderControls:ParticlesExpanderControl x:Name="ParticleParticlesExpanderControl" BinaryFileType="Particle" />
 					</ScrollViewer>
