--- a/DevilDaggersAssetEditor/GUI/Windows/Main.xaml
+++ b/DevilDaggersAssetEditor/GUI/Windows/Main.xaml
@@ -16,7 +16,7 @@
 		<DockPanel Grid.Row="0">
 			<userControls:MenuBarUserControl />
 		</DockPanel>
-		<ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+		<ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Background="#777">
 			<TabControl Grid.Row="1" Name="TabControl" Width="1366" Height="768">
 				<TabItem Header="audio">
 					<assetTabControls:AudioAssetTabControl x:Name="AudioAudioAssetTabControl" BinaryFileType="Audio" />
